# doger

./: Cargo.toml  Dioxus.toml  README.md
assets/: timetable.css
src/: database.rs  get_timeslot_index.js  main.rs  models.rs  server_fns.rs
src/components/: bottom_menu.rs  buttons.rs  input_fields.rs  mod.rs  modals.rs
src/components/pages/: home.rs
src/components/timetable/: attach_event_listener.js  mod.rs  timeslot.rs  timeslot_selection.rs  timetable.rs
