[package]
name = "doger4"
version = "0.1.0"
authors = ["Ugnius27"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0-alpha.5", features = ["fullstack"] }
axum = { version = "0.7.5", optional = true }
tokio = { version = "1.16.1", features = ["full"], optional = true }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono"], optional = true }
chrono = { version = "0.4.38", features = ["serde"], optional = true }

# Debug
dioxus-logger = "0.5.1"

[features]
default = ["chrono"]
server = ["dioxus/server", "axum", "sqlx", "tokio"]
web = ["dioxus/web"]
